--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:padding="@dimen/item_layout_medium_indent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/itemColor_iv_background"
-        android:layout_width="@dimen/icon_big_size"
-        android:layout_height="@dimen/icon_big_size"
+    <data>
+
+        <import type="sgtmelon.handynotes.Help.Icon" />
+
+        <variable
+            name="position"
+            type="int" />
+
+    </data>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/ic_button_color_10" />
+        android:gravity="center"
+        android:padding="@dimen/item_layout_medium_indent">
 
-    <ImageView
-        android:id="@+id/itemColor_iv_check"
-        android:layout_width="@dimen/icon_medium_size"
-        android:layout_height="@dimen/icon_medium_size"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_button_color_check" />
+        <ImageView
+            android:id="@+id/itemColor_iv_background"
+            android:layout_width="@dimen/icon_big_size"
+            android:layout_height="@dimen/icon_big_size"
+            android:layout_gravity="center"
+            android:background='@{Icon.getColorIcon(context, position)}' />
 
-    <ImageView
-        android:id="@+id/itemColor_iv_click"
-        android:layout_width="@dimen/icon_big_size"
-        android:layout_height="@dimen/icon_big_size"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_gravity="center" />
+        <ImageView
+            android:id="@+id/itemColor_iv_check"
+            android:layout_width="@dimen/icon_medium_size"
+            android:layout_height="@dimen/icon_medium_size"
+            android:layout_gravity="center"
+            android:src='@{Icon.getColorCheck(context, position)}' />
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/itemColor_iv_click"
+            android:layout_width="@dimen/icon_big_size"
+            android:layout_height="@dimen/icon_big_size"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless" />
+
+    </FrameLayout>
+</layout>
