--- a/app/src/main/res/layout/frg_n_text.xml
+++ b/app/src/main/res/layout/frg_n_text.xml
@@ -1,51 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include layout="@layout/inc_toolbar_note" />
+    <data>
 
-    <ScrollView
+        <import
+            alias="v"
+            type="android.view.View" />
+
+        <variable
+            name="itemNote"
+            type="sgtmelon.handynotes.model.item.ItemNote" />
+
+        <variable
+            name="keyEdit"
+            type="boolean"/>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        android:fillViewport="true">
+        android:background="@color/colorBackground"
+        android:orientation="vertical">
 
-        <FrameLayout
+        <include
+            layout="@layout/inc_toolbar_note"
+            app:keyEdit='@{keyEdit}'
+            app:itemNote='@{itemNote}'  />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:fillViewport="true">
 
-            <EditText
-                android:id="@+id/frgText_et_enter"
-                style="@style/EditText"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:gravity="top"
-                android:hint="@string/hint_enter_text"
-                android:imeOptions="flagNoFullscreen"
-                android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                android:padding="@dimen/item_layout_medium_indent"
-                android:textSize="@dimen/text_big_size"
-                android:visibility="visible" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/frgText_tv_text"
-                style="@style/EditText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:gravity="top"
-                android:hint="@string/hint_enter_text"
-                android:padding="@dimen/item_layout_medium_indent"
-                android:textIsSelectable="true"
-                android:textSize="@dimen/text_big_size"
-                android:visibility="gone" />
+                <EditText
+                    android:id="@+id/frgText_et_enter"
+                    style="@style/EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:gravity="top"
+                    android:hint="@string/hint_enter_text"
+                    android:imeOptions="flagNoFullscreen"
+                    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+                    android:padding="@dimen/item_layout_medium_indent"
+                    android:text='@={itemNote.text}'
+                    android:textSize="@dimen/text_big_size"
+                    android:visibility='@{keyEdit ? v.VISIBLE : v.INVISIBLE}' />
 
-        </FrameLayout>
+                <TextView
+                    android:id="@+id/frgText_tv_text"
+                    style="@style/EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:gravity="top"
+                    android:hint="@string/hint_enter_text"
+                    android:padding="@dimen/item_layout_medium_indent"
+                    android:text='@{itemNote.text}'
+                    android:textIsSelectable="true"
+                    android:textSize="@dimen/text_big_size"
+                    android:visibility='@{!keyEdit ? v.VISIBLE : v.INVISIBLE}' />
 
-    </ScrollView>
+            </FrameLayout>
 
-</LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
+</layout>
